# ftmq-api

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  perform.py  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yml
docs/: index.md  settings.md
ftmq_api/: api.py  query.py  serialize.py  settings.py  store.py  views.py
tests/: test_api.py
