[project]
name = "ftmq-api"
version = "2.2.2"
description = "FastAPI for FollowTheMoney data stores"
authors = [{ name = "Simon Wörpel", email = "simon.woerpel@pm.me" }]
license = "AGPLv3+"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11,<4"
dependencies = [
    "ftmq-search (>=0.0.2,<0.0.3)",
    "ftmq (>=0.8.2,<0.9.0)",
    "anystore[redis] (>=0.3.2,<0.4.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "furl (>=2.1.4,<3.0.0)",
]

[project.urls]
Homepage = "https://github.com/dataresearchcenter/ftmq-api"
Repository = "https://github.com/dataresearchcenter/ftmq-api"
Documentation = "https://github.com/dataresearchcenter/ftmq-api"
Issues = "https://github.com/dataresearchcenter/ftmq-api/issues"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
pre-commit = "^4.0.1"
ipdb = "^0.13.13"
isort = "^5.12.0"
pytest = "^8.3.2"
pytest-cov = "^6.0.0"
pytest-env = "^1.1.5"
mypy = "^1.11.1"
coverage = "^7.6.8"
bump2version = "^1.0.1"
httpx = "^0.28.0"
uvicorn = "^0.34.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
CATALOG = "./tests/fixtures/catalog.json"
REDIS_DEBUG = 1
CACHE = 1
ANYSTORE_URI = "redis://localhost"
